--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,9 +2,35 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
-        <title>Homepage</title>
+        <title>blind2024</title>
+        <link rel="stylesheet" href"homepage.css">
     </head>
     <body>
-        <p>Olá, bem vindos ao meu 1° site em Python!</p>
+        <!-- Cabeçalho-->
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#">Registros</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <!-- Conteúdo Principal-->
+        <main>
+            <section>
+                <h1>Blind 2024</h1>
+                <p>Registre o mundo de forma inclusiva.</p>
+                <button>Saiba mais</button>
+                <button>Teste</button>
+                <button>Treinamento</button>
+            </section>
+        </main>
+
+        <!-- Rodapé-->
+        <footer>
+            <p>&copy;2024 - Todos os direitos reservados.</p>
+        </footer>
     </body>
 </html> 
