--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,8 +3,78 @@
     <head>
         <meta charset="UTF-8">
         <title>blind2024</title>
-        <link rel="stylesheet" href"homepage.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/homepage.css') }}">
     </head>
+
+    <style>
+        body{
+            font-family: Arial, Helvetica, sans-serif;
+            line-height: 1.6;
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+
+        header{
+            background-color: #333333;
+            color: #fff;
+            padding: 1em;
+            text-align: center;
+        }
+
+        nav ul{
+            list-style: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        nav li{
+            display: inline-block;
+            margin-right: 20px;
+        }
+
+        nav a{
+            color:#fff;
+            text-decoration: none;
+        }
+
+        main{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 2em;
+        }
+        
+        section{
+            background-color: #f7f7f7;
+            padding: 1em;
+            margin-bottom: 20px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+
+        button{
+            background-color: #333;
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+
+        button:hover{
+            background-color: #555;
+        }
+
+        footer{
+            background-color: #333;
+            color: #fff;
+            padding: 1em;
+            text-align: center;
+            clear: both;
+        }
+
+    </style>
+    
     <body>
         <!-- Cabeçalho-->
         <header>
