--- a/templates/teste.html
+++ b/templates/teste.html
@@ -6,5 +6,8 @@
     </head>
     <body>
         <p>Imagens registradas</p>
+        <iframe> </iframe>
+        <input placeholder="Que tipo de imagem?">
+        <button>Que imagem deseja capturar?</button>
     </body>
 </html> 
