--- a/templates/usuarios.html
+++ b/templates/usuarios.html
@@ -5,6 +5,6 @@
         <title>Perfil do Usuario</title>
     </head>
     <body>
-        <p>Meu nome é {{nome_usuario}}</p>
+        <p>Meu nome é:</p>
     </body>
 </html> 
