--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -5,20 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blind 2024</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/homepage.css') }}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
+    <!-- Menu Lateral-->
+    <nav class="menu-lateral">
+        <div class="btn-expandir"> 
+            <i class="bi bi-list" id="btn-exp"></i>
+        </div>
 
-    <!-- Cabeçalho -->
-    <header>
-        <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/sobre">Sobre</a></li>
-                <li><a href="/teste">Teste</a></li>
-                <li><a href="/usuarios">Usuários</a></li>
-            </ul>
-        </nav>
-    </header>
+        <ul>
+            <li class="item-menu">
+                <a href="#">
+                    <span class="icon"><i class="bi bi-house"></i></span>
+                    <span class="txt-link">Home</span>
+                </a>
+            </li>
+            <li class="item-menu">
+                <a href="#">
+                    <span class="icon"><i class="bi bi-info-circle"></i></span>
+                    <span class="txt-link">Sobre</span>
+                </a>
+            </li>
+            <li class="item-menu">
+                <a href="#">
+                    <span class="icon"><i class="bi bi-patch-check"></i></span>
+                    <span class="txt-link">Teste</span>
+                </a>
+            </li>
+            <li class="item-menu">
+                <a href="#">
+                    <span class="icon"><i class="bi bi-person"></i></span>
+                    <span class="txt-link">Usuário</span>
+                </a>
+            </li>
+        </ul>
+
+    </nav>
+
+    <script src="menu.js"></script>
 
     <!-- Conteúdo Principal -->
     <main>
