--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -4,76 +4,87 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blind 2024</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/homepage.css') }}">
+    <link rel="stylesheet" href="static/css/homepage.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-</head>
+</head> 
 <body>
-    <!-- Menu Lateral-->
-    <nav class="menu-lateral">
-        <div class="btn-expandir"> 
-            <i class="bi bi-list" id="btn-exp"></i>
-        </div>
-
-        <ul>
-            <li class="item-menu">
-                <a href="#">
-                    <span class="icon"><i class="bi bi-house"></i></span>
-                    <span class="txt-link">Home</span>
-                </a>
-            </li>
-            <li class="item-menu">
-                <a href="#">
-                    <span class="icon"><i class="bi bi-info-circle"></i></span>
-                    <span class="txt-link">Sobre</span>
-                </a>
-            </li>
-            <li class="item-menu">
-                <a href="#">
-                    <span class="icon"><i class="bi bi-patch-check"></i></span>
-                    <span class="txt-link">Teste</span>
-                </a>
-            </li>
-            <li class="item-menu">
-                <a href="#">
-                    <span class="icon"><i class="bi bi-person"></i></span>
-                    <span class="txt-link">Usuário</span>
-                </a>
-            </li>
-        </ul>
-
-    </nav>
-
-    <script src="menu.js"></script>
-
-    <!-- Conteúdo Principal -->
-    <main>
-        <section>
+    
+    <div class="navBar">
+        <div class="blind">
             <h1>Blind 2024</h1>
-            <p>Registrando o mundo de forma acessível para todos.</p>
-        </section>
+        </div>
+        <input type="checkbox" id="check" class="check">
+        <div class="item">
+            <label for="check" class="menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </label>
+            <ul>
+                <li>
+                    <a href="/">
+                        <span class="icon"><i class="bi bi-house"></i></span>
+                        <span class="txt-link">Home</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="/sobre">
+                        <span class="icon"><i class="bi bi-info-circle"></i></span>
+                        <span class="txt-link">Sobre</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="/teste">
+                        <span class="icon"><i class="bi bi-patch-check"></i></span>
+                        <span class="txt-link">Teste</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="usuarios">
+                        <span class="icon"><i class="bi bi-person"></i></span>
+                        <span class="txt-link">Usuário</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
 
-        <section>
-            <h2>Nossa Missão</h2>
-            <p>Nosso objetivo é tornar o mundo visual acessível para pessoas com deficiência visual. Com a tecnologia, registramos imagens e oferecemos descrições detalhadas e sensíveis ao contexto, permitindo uma melhor compreensão e inclusão.</p>
-        </section>
+    <h2 class="registro">Registrando o mundo de forma acessível para todos.</h2>
 
-        <section>
-            <h2>Como Funciona</h2>
-            <p>Nossa plataforma utiliza inteligência artificial para descrever imagens e proporcionar descrições enriquecedoras para quem não pode vê-las. Carregue uma imagem ou tire uma foto, e nossa ferramenta gerará uma descrição acessível.</p>
-            <button><a href="/teste">Experimente Agora</a></button>
-        </section>
+    <div class="containerImg">
+        <img src="static/img/fundo azul.jpg" alt="Imagem Ilustrativa">
+    </div>
 
-        <section>
-            <h2>Contribua para a Inclusão</h2>
-            <p>Junte-se à nossa comunidade de voluntários e ajude a melhorar as descrições das imagens. Sua contribuição pode fazer uma grande diferença para quem depende de descrições visuais.</p>
-            <button>Saiba Mais</button>
-        </section>
+    <main>
+        <div class="container-horizontal">
+            <section class="caixa-esquerta">
+                <h2 class="concordo">
+                Nossa Missão
+                </h2>
+                <p class="paragrafo">
+                Nosso objetivo é tornar o mundo visual acessível para pessoas com deficiência visual. Com a tecnologia, registramos imagens e oferecemos descrições detalhadas e sensíveis ao contexto, permitindo uma melhor compreensão e inclusão.
+                </p>
+            </section>
+
+            <section>
+                <h2>Como Funciona</h2>
+                    <p>Nossa plataforma utiliza inteligência artificial para descrever imagens e proporcionar descrições enriquecedoras para quem não pode vê-las. Carregue uma imagem ou tire uma foto, e nossa ferramenta gerará uma descrição acessível.</p>
+                    <button><a href="/teste">Experimente Agora</a></button>
+            </section>
+        
+            <section>
+                <h2>Contribua para a Inclusão</h2>
+                    <p>Junte-se à nossa comunidade de voluntários e ajude a melhorar as descrições das imagens. Sua contribuição pode fazer uma grande diferença para quem depende de descrições visuais.</p>
+                    <button><a href="/contribuicao">Saiba Mais</a></button>
+            </section>
+        </div>
+        
     </main>
 
-    <!-- Rodapé -->
-    <footer>
-        <p class="rodap">&copy; 2024 Inclusão Visual. Todos os direitos reservados.</p>
-    </footer>
 
+    
+        
+    
+    
 </body>
 </html>
