--- a/templates/quemSomos.html
+++ b/templates/quemSomos.html
@@ -1,11 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Projeto Blind - Visão para Todos</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="static/css/quemSomos.css">
 </head>
 <body>
+    <header>
+        <h1>Projeto Blind</h1>
+        <p>Oferecendo visão para todos, através da inteligência artificial</p>
+    </header>
     
+    <div class="container">
+        <div class="section">
+            <h2>O que é o Projeto Blind?</h2>
+            <p>O Projeto Blind é uma iniciativa inovadora que visa ajudar pessoas com deficiência visual a "verem" o mundo ao seu redor. Utilizando óculos equipados com inteligência artificial, o projeto proporciona uma experiência de navegação mais independente e inclusiva, permitindo que os usuários compreendam melhor o ambiente ao seu redor.</p>
+        </div>
+
+        <div class="section">
+            <h2>Como Funciona?</h2>
+            <p>Os óculos especiais do Projeto Blind estão equipados com uma inteligência artificial avançada capaz de reconhecer objetos, pessoas, lugares e até mesmo textos em tempo real. A IA descreve o que vê para o usuário, usando áudio em tempo real para transmitir informações detalhadas sobre o ambiente, incluindo orientação espacial, descrição de objetos e até mesmo leitura de placas e sinais.</p>
+        </div>
+
+        <div class="section">
+            <h2>Objetivo do Projeto</h2>
+            <p>O objetivo principal do Projeto Blind é proporcionar às pessoas com deficiência visual a oportunidade de explorar o mundo com mais liberdade e confiança. Com a descrição detalhada de lugares e objetos, os usuários podem se locomover de forma autônoma, descobrir novos locais e se sentir mais conectados ao ambiente ao seu redor.</p>
+        </div>
+
+        <div class="section">
+            <h2>Benefícios</h2>
+            <ul>
+                <li>Independência e autonomia para pessoas com deficiência visual</li>
+                <li>Maior segurança ao se locomover em locais públicos e privados</li>
+                <li>Inclusão social e integração no ambiente ao redor</li>
+                <li>Acesso rápido a informações visuais que facilitam a tomada de decisões</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Junte-se a Nós!</h2>
+            <p>Se você acredita no poder da tecnologia para transformar vidas, junte-se ao Projeto Blind. Seja como voluntário, colaborador ou apoiador, sua ajuda pode fazer a diferença na vida de muitos.</p>
+            <a href="/contribuicao" class="button">Saiba Mais</a>
+        </div>
+    </div>
 </body>
 </html>
